--- a/register.html
+++ b/register.html
@@ -79,6 +79,15 @@
             Already a member? <a href="login.html">Sign in</a>
         </p>
     </form>
-
+    <footer class="bg-light">
+        <p class="placeholder-glow" style="font-size: 5px">
+            <span class="placeholder col-12"></span>
+    </p>
+    
+        <div class="text-center p-3 m-3">
+        <!-- <a class="float-start text-decoration-none text-dark" href="/insights">Insights</a> -->&copy; 2023 TravelTech. All rights reserved 
+        <!-- <a class="float-end text-decoration-none text-dark" href="/faq">FAQ</a> -->
+        </div>
+    </footer>
 </body>
 </html>
